--- a/index.html
+++ b/index.html
@@ -86,4 +86,7 @@
         <h4 id="white">จัดทำโดยนายทัตต์ดนัย บุญเอม<br>ติดต่อผ่าน Email : Tatdanaiz@gmail.com<br>เบอร์โทร 0612679201</h4>    
         </div>
         </div>
+        <div class="text-frame3">
+            <a href="HTML/myAdvisor.html">My Advisor</a>
+        </div>
     </body>
