--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
     <head>
         <title> Introduce </title>
     <style>
-        .text-frame1 {border: 2px rgb(63, 115, 174);
+        .text-frame1 {border: 2px rgb(168, 117, 58);
                     padding: 5px;
                     margin: 5px;
                     width: 1225px;
-                    background-color: rgb(97, 164, 235);}
+                    background-color: burlywood;}
         .text-frame2 {border: 2px solid rgb(49, 173, 138);
                     padding: 5px;
                     margin: 5px;
@@ -80,13 +80,13 @@
         <video src="video/714665569.760169.mp4" controls>
         </div>
         </video>
+        <br>
+        <a href="HTML/myAdvisor.html"><img src="images/Ad.jpg" width="100"></a>
+        <a href="HTML/myActivities.html"><img src="images/Ac.jpg" width="100"></a>
         </center>
         <div align="right">
         <div class="text-frame1">
         <h4 id="white">จัดทำโดยนายทัตต์ดนัย บุญเอม<br>ติดต่อผ่าน Email : Tatdanaiz@gmail.com<br>เบอร์โทร 0612679201</h4>    
         </div>
-        </div>
-        <div class="text-frame3">
-            <a href="HTML/myAdvisor.html">My Advisor</a>
         </div>
     </body>
