--- a/HTML/myAdvisor.html
+++ b/HTML/myAdvisor.html
@@ -60,8 +60,6 @@
     <img src="images/S__3153926.jpg" width="350">
     <h2>อ.สิริกันยา นิลพานิช</h2>
     <h3>ติดต่อ<br>02-564-4444 ต่อ 2157 ต่อ 218<br>Email<br>skn@cs.tu.ac.th</h3>
-    <div class="text-frame3">
-        <a href="index.html">My Home page</a>
-    </div>
+        <a href="../index.html"><img src="images/HP.jpg" width="100"></a>
         </center>
     </body>
