--- a/CSS/SparkCamp.html
+++ b/CSS/SparkCamp.html
@@ -10,9 +10,10 @@
     </style>
     <body>
     <center>
-        <img src="images/Acp1.jpg" width="250">
+        <img src="image/Acp2.jpg" width="250">
+        <img src="image/Acp3.jpg" width="250">
         <h2>First Meet CSTU38</h2>
         <br>
-        <a href="../index.html"><img src="images/HP.jpg" width="100"></a>
+        <a href="../index.html"><img src="image/HP.jpg" width="100"></a>
     </center>
     </body>
