--- a/CSS/myActivities.html
+++ b/CSS/myActivities.html
@@ -13,13 +13,13 @@
     <body>
         <center>
     <h2>My Activity</h2>
-        <a href="SparkCamp.html"><img src="images/Sp.jpg" width="200"></a>
-        <a href="FirstMeet.html"><img src="images/Fm.jpg" width="200"></a>
+        <a href="SparkCamp.html"><img src="image/Sp.jpg" width="200"></a>
+        <a href="FirstMeet.html"><img src="image/Fm.jpg" width="200"></a>
         <br>
         <br>
         <br>
         <br>
         <br>
-        <a href="../index.html"><img src="images/HP.jpg" width="100"></a>
+        <a href="../index.html"><img src="image/HP.jpg" width="100"></a>
         </center>
     </body>
