--- a/CSS/myAdvisor.html
+++ b/CSS/myAdvisor.html
@@ -57,9 +57,9 @@
     <body>
         <center>
     <h2>My Advisor</h2>
-    <img src="images/S__3153926.jpg" width="350">
+    <img src="image/S__3153926.jpg" width="350">
     <h2>อ.สิริกันยา นิลพานิช</h2>
     <h3>ติดต่อ<br>02-564-4444 ต่อ 2157 ต่อ 218<br>Email<br>skn@cs.tu.ac.th</h3>
-        <a href="../index.html"><img src="images/HP.jpg" width="100"></a>
+        <a href="../index.html"><img src="image/HP.jpg" width="100"></a>
         </center>
     </body>
