--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
             <h2 id="white">Introduce<br>ชื่อ : นายทัตต์ดนัย บุญเอม<br>ชื่อเล่น : แสตมป์<br>CS38TU89</h2>
         </div>
         <div class="image-left">
-            <img src="images/S__3153924.jpg" width="200" alt="images/S__3153924">
+            <img src="image/S__3153924.jpg" width="200" alt="image/S__3153924">
         </div>
         <div class="image-right">
-            <img src="images/S__3153925.jpg" width="200" alt="images/S__3153925">
+            <img src="image/S__3153925.jpg" width="200" alt="image/S__3153925">
         </div>
         <div class="container">
             <h1>About myself</h1>
@@ -76,13 +76,13 @@
             <h3>ชอบเล่นเกม<br>ชอบแข่ง A-Math<br>ชอบกินอาหารทะเล<br>ไม่ชอบ<font color ="red"><strong>ทุเรียน</strong></font>คร้าบบบ</h3>
         </div>
         <h3>Video</h3>
-        <div class="video-container">
-        <video src="video/714665569.760169.mp4" controls>
+        <div class="VDO-container">
+        <video src="VDO/714665569.760169.mp4" controls>
         </div>
         </video>
         <br>
-        <a href="HTML/myAdvisor.html"><img src="images/Ad.jpg" width="100"></a>
-        <a href="HTML/myActivities.html"><img src="images/Ac.jpg" width="100"></a>
+        <a href="CSS/myAdvisor.html"><img src="image/Ad.jpg" width="100"></a>
+        <a href="CSS/myActivities.html"><img src="image/Ac.jpg" width="100"></a>
         </center>
         <div align="right">
         <div class="text-frame1">
