--- a/CSS/myAdvisor.html
+++ b/CSS/myAdvisor.html
@@ -52,14 +52,28 @@
     .clear {
         clear: both;
     }
+        .col-1 {width: 8.33%;}
+        .col-2 {width: 16.66%;}
+        .col-3 {width: 25%;}
+        .col-4 {width: 33.33%;}
+        .col-5 {width: 41.66%;}
+        .col-6 {width: 50%;}
+        .col-7 {width: 58.33%;}
+        .col-8 {width: 66.66%;}
+        .col-9 {width: 75%;}
+        .col-10 {width: 83.33%;}
+        .col-11 {width: 91.66%;}
+        .col-12 {width: 100%;}
         </style>
         </head>
     <body>
         <center>
+    <div class="col">
     <h2>My Advisor</h2>
     <img src="image/S__3153926.jpg" width="350">
     <h2>อ.สิริกันยา นิลพานิช</h2>
     <h3>ติดต่อ<br>02-564-4444 ต่อ 2157 ต่อ 218<br>Email<br>skn@cs.tu.ac.th</h3>
-        <a href="../index.html"><img src="image/HP.jpg" width="100"></a>
+    <a href="../index.html"><img src="image/HP.jpg" width="100"></a>
+    </div>
         </center>
     </body>
