--- a/index.html
+++ b/index.html
@@ -56,10 +56,23 @@
         .clear {
             clear: both;
         }
+        .col-1 {width: 8.33%;}
+        .col-2 {width: 16.66%;}
+        .col-3 {width: 25%;}
+        .col-4 {width: 33.33%;}
+        .col-5 {width: 41.66%;}
+        .col-6 {width: 50%;}
+        .col-7 {width: 58.33%;}
+        .col-8 {width: 66.66%;}
+        .col-9 {width: 75%;}
+        .col-10 {width: 83.33%;}
+        .col-11 {width: 91.66%;}
+        .col-12 {width: 100%;}
     </style>
     </head>
     <body>
         <center>
+    <div class="col">
         <div class="text-frame1">
             <h2 id="white">Introduce<br>ชื่อ : นายทัตต์ดนัย บุญเอม<br>ชื่อเล่น : แสตมป์<br>CS38TU89</h2>
         </div>
@@ -70,10 +83,12 @@
             <img src="image/S__3153925.jpg" width="200" alt="image/S__3153925">
         </div>
         <div class="container">
+        <div class="col">
             <h1>About myself</h1>
             <h3>เกิดที่จังหวัดอุตรดิตถ์<br>จบการศึกษาจากโรงเรียนอุตรดิตถ์<br>ISFP-T</h3>
             <h1>Likes and Dislikes</h1>
             <h3>ชอบเล่นเกม<br>ชอบแข่ง A-Math<br>ชอบกินอาหารทะเล<br>ไม่ชอบ<font color ="red"><strong>ทุเรียน</strong></font>คร้าบบบ</h3>
+        </div>
         </div>
         <h3>Video</h3>
         <div class="VDO-container">
@@ -89,4 +104,5 @@
         <h4 id="white">จัดทำโดยนายทัตต์ดนัย บุญเอม<br>ติดต่อผ่าน Email : Tatdanaiz@gmail.com<br>เบอร์โทร 0612679201</h4>    
         </div>
         </div>
+    </div>
     </body>
