--- a/CSS/SparkCamp.html
+++ b/CSS/SparkCamp.html
@@ -7,6 +7,27 @@
             background-repeat: no-repeat;}
         img {
         border: 2px solid #000;}
+        @media screen {
+            max-width: 400px;
+            {width: 100%;}
+        }
+        @media screen {
+            max-width: 800px;
+        .col-s-1 {width: 8.33%;}
+        .col-s-2 {width: 16.66%;}
+        .col-s-3 {width: 25%;}
+        .col-s-4 {width: 33.33%;}
+        .col-s-5 {width: 41.66%;}
+        .col-s-6 {width: 50%;}
+        .col-s-7 {width: 58.33%;}
+        .col-s-8 {width: 66.66%;}
+        .col-s-9 {width: 75%;}
+        .col-s-10 {width: 83.33%;}
+        .col-s-11 {width: 91.66%;}
+        .col-s-12 {width: 100%;}
+        }
+        @media screen {
+            min-width:768px;
         .col-1 {width: 8.33%;}
         .col-2 {width: 16.66%;}
         .col-3 {width: 25%;}
@@ -19,10 +40,11 @@
         .col-10 {width: 83.33%;}
         .col-11 {width: 91.66%;}
         .col-12 {width: 100%;}
+        }
     </style>
     <body>
     <center>
-        <div class="col">
+        <div class="col-6 col-s-6">
         <img src="image/Acp2.jpg" width="250">
         <img src="image/Acp3.jpg" width="250">
         <h2>First Meet CSTU38</h2>
