--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
         .col-12 {width: 100%;}
         }
         .text-frame1 {border: 2px rgb(166, 114, 54);
-                    display: flex;
+                    flex: 1;
                     padding: 5px;
                     margin: 5px;
                     width: 1225px;
                     background-color: burlywood;}
         .text-frame2 {border: 2px solid rgb(49, 173, 138);
-                    display: flex;
+                    flex: 1;
                     padding: 5px;
                     margin: 5px;
                     width: 250px;
