--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
         }
         .container {
             display: flex;
+            justify-content: space-between;
             flex-direction: column;
             vertical-align: middle;
         }
