--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
                     flex: 1;
                     padding: 5px;
                     margin: 5px;
-                    width: 1225px;
+                    width: 100%;
                     background-color: burlywood;}
         .text-frame2 {border: 2px solid rgb(49, 173, 138);
                     flex: 1;
                     padding: 5px;
                     margin: 5px;
-                    width: 250px;
+                    width: 100%;
                     background-color: rgb(33, 122, 85);}
         body    {background-image: url('b.jpg');
                 background-size: cover;
