--- a/index.html
+++ b/index.html
@@ -2,44 +2,28 @@
     <head>
         <title> Introduce </title>
     <style>
-        @media screen {
-            min-width: 600px;
-            {width: 100%;}
+        .col {
+            flex: 1;
+            padding: 10px;
+            box-sizing: border-box;
         }
-        @media screen {
-            min-width: 768px;
-        .col-s-1 {width: 8.33%;}
-        .col-s-2 {width: 16.66%;}
-        .col-s-3 {width: 25%;}
-        .col-s-4 {width: 33.33%;}
-        .col-s-5 {width: 41.66%;}
-        .col-s-6 {width: 50%;}
-        .col-s-7 {width: 58.33%;}
-        .col-s-8 {width: 66.66%;}
-        .col-s-9 {width: 75%;}
-        .col-s-10 {width: 83.33%;}
-        .col-s-11 {width: 91.66%;}
-        .col-s-12 {width: 100%;}
+        .row {
+            display: flex;
+            flex-wrap: wrap;
         }
-        @media screen {
-            min-width:1024px;
-        .col-1 {width: 8.33%;}
-        .col-2 {width: 16.66%;}
-        .col-3 {width: 25%;}
-        .col-4 {width: 33.33%;}
-        .col-5 {width: 41.66%;}
-        .col-6 {width: 50%;}
-        .col-7 {width: 58.33%;}
-        .col-8 {width: 66.66%;}
-        .col-9 {width: 75%;}
-        .col-10 {width: 83.33%;}
-        .col-11 {width: 91.66%;}
-        .col-12 {width: 100%;}
+        @media (max-width: 600px){
+            .col{
+                flex: 1 100%;
+            }
+        }
+        @media (min-width: 601px) and (max-width: 900px){
+            .col{
+                flex: 1 50%;
+            }
         }
         .text-frame1 {border: 2px rgb(166, 114, 54);
                     flex: 1;
                     padding: 5px;
-                    margin: 5px;
                     width: 100%;
                     background-color: burlywood;}
         .text-frame2 {border: 2px solid rgb(49, 173, 138);
